--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.2",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "select2": "^4.1.0-rc.0"
   }
 }
