--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.0.2",
     "inputmask": "^5.0.5",
     "jquery": "^3.6.0",
