--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "^5.0.2",
     "inputmask": "^5.0.5",
     "jquery": "^3.6.0",
-    "select2": "^4.1.0-rc.0"
+    "select2": "^4.1.0-rc.0",
+    "slick-carousel": "^1.8.1"
   }
 }
