--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.0.2",
+    "daterangepicker": "^3.1.0",
     "dropzone": "^5.9.2",
     "inputmask": "^5.0.5",
     "jquery": "^3.6.0",
