--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.5.0",
     "node-sass": "^6.0.0",
-    "npm": "^7.10.0",
+    "npm": "^7.21.1",
     "postcss-loader": "^5.2.0",
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^11.0.1",
@@ -40,8 +40,11 @@
     "bootstrap": "^5.0.2",
     "daterangepicker": "^3.1.0",
     "dropzone": "^5.9.2",
+    "i": "^0.3.6",
     "inputmask": "^5.0.5",
     "jquery": "^3.6.0",
+    "jquery-date-range-picker": "^1.0.4",
+    "moment": "^2.29.1",
     "select2": "^4.1.0-rc.0",
     "slick-carousel": "^1.8.1"
   }
